# mineru-book-pipeline

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
book_template/: Makefile  book.yml  mkdocs.yml
docs/: README_EN.md  index.md
docs/guide/: cloud-api-and-deploy.md  configuration.md  export-pipeline.md  getting-started.md  install-and-upgrade.md  release.md  validation-and-troubleshooting.md  workflow-run-a-book.md
mineru_book_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mineru_pipeline/: __init__.py  api_client.py  cli.py  core.py  fingerprint.py  loader.py
mineru_pipeline/plugins/: __init__.py  base.py  cf_pages.py
minerupress/: __init__.py  cli.py  core.py  fingerprint.py  headings.py  loader.py
minerupress/book_template/: book.yml
skills/mineru-book-pipeline/: SKILL.md
skills/mineru-book-pipeline/agents/: openai.yaml
skills/minerupress/: SKILL.md
skills/minerupress/references/: book-yml.md
tests/: test_cli.py  test_core.py  test_headings.py
