[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minerupress"
version = "0.1.0"
description = "Turn MinerU output into publishable MkDocs Material book sites"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["mineru", "mkdocs", "book", "pdf", "markdown", "publishing", "agent", "headings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
qr = ["opencv-python>=4.8.0"]
cjk = ["pangu>=4.0.0"]
all = ["opencv-python>=4.8.0", "pangu>=4.0.0"]

[project.scripts]
minerupress-export = "minerupress.cli:main"
minerupress-fetch  = "minerupress.cli:fetch_main"
minerupress-headings = "minerupress.headings:main"
mineru-export = "minerupress.cli:main"
mineru-fetch  = "minerupress.cli:fetch_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["minerupress*"]
